# gitgud

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTENT.md  LICENSE  README.md  install.sh
.github/workflows/: release.yml
plan/: gg-ask.md  gg-rescue.md
src/: ai.rs  app.rs  cli.rs  config.rs  git.rs  git_memory.rs  lib.rs  main.rs  memory.rs  rescue.rs  risk.rs  tui.rs
tests/: ai_provider.rs  git_flow.rs  rescue_flow.rs
