[package]
name = "git-buddy"
version = "0.1.0"
edition = "2024"
description = "A terminal UI for Git with AI-assisted commit and push workflows"
license = "MIT"
readme = "README.md"
keywords = ["git", "cli", "tui", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
ratatui = "0.29.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.23"
tui-textarea = "0.7.0"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.19.1"
